# rfid

./: .env  .envrc  .gitignore  CMakeLists.txt  analyze.py  command_gen.py  crc5.py  dpc.py  extract_inter_channel.py  plot.py  query.py  rfid.py  rfid_query.grc  rfid_query.py  run.sh  rx.grc
grc/: command_gen.py  rfid_query.grc  rfid_query.py  rx.grc  rx.py
lib/: dpc.py  rfid.py  utils.py
notebooks/: main.ipynb
scripts/: a.py  analyze.py  collect_data.sh  command_gen.py  crc_test.py  diffrent_distances.py  disp_rn16.py  dpctest.py  extract_inter_channel.py  gaussian.py  gmm.py  main.py  multiple_tags.py  phase_sim.py  select_cmd.py  testcxx.py
src/: Makefile  extract_inter_channel.cpp  extract_inter_channel.hpp  global.cpp  global.hpp  main.cpp  rfid_block.cpp  rfid_block.hpp  split_rn16.cpp  test.py  track_inter_channel.cpp
src/crc/: crc.cpp  crc.hpp  crc16genibus.c  crc16genibus.h  crc5epc_c1g2.c  crc5epc_c1g2.h
src/python/: extract_inter_channel_python.cpp
